Fixes a few stylistic issues with new selection model - selection checkmarks were appearing in the wrong modes, and we were using the wrong color for the empty checkbox

--- a/src/less/colors-listview.less
+++ b/src/less/colors-listview.less
@@ -58,7 +58,7 @@
     .win-itemcontainer.win-selectionmode.win-container .win-itembox::after,
     .win-listview .win-surface.win-selectionmode .win-itembox::after {
         border-color: @baseHigh;
-        background-color: @chromeMediumMid;
+        background-color: @chromeMid;
     }
     .win-selectioncheckmark {
         color: @baseHigh;
